$Id: History,v 1.8 1999-05-27 13:04:49 stesting Exp $
-------------------------------------------------------------------

     =========================================================
     Geant4 - an Object-Oriented Toolkit for Simulation in HEP
     =========================================================

                      Category History file
                      ---------------------
This file should be used by G4 developers and category coordinators
to briefly summarize all major modifications introduced in the code
and keep track of all category-tags.
It DOES NOT substitute the  CVS log-message one should put at every
committal in the CVS repository !

     ----------------------------------------------------------
     * Reverse chronological order (last date on top), please *
     ----------------------------------------------------------

27th May 1999  John Allison  (examples-01-00-07)
- Updated exampleN04.out to correspond to geant4-00-cand-09b.

25th May 1999  John Allison  (examples-01-00-06)
- Updated exampleN04.out to correspond to em-01-00-05a.

19th May 1999  John Allison  (examples-01-00-05)
- Removed #ifdef GNU_GCC in exampleN03.cc.
- Updated .out files for geant4-00-ref-08 and, hopefully, the May Release.
- ExN05CalorimeterHit.hh: Added correct delete operators for
  preallocation (Frank Behner).
- E02: Minor update for Sun (Youhei Morita).

7th May 1999  John Allison  (examples-01-00-04)
- Removed /vis/clear/scene from exampleN03.in.

26th April 1999  Makoto Asai (examples-01-00-03)
- Changed interfaces to user action classes.

27th March 1999  John Allison  (examples-01-00-02)
- Updated exampleNxx.out where xx = 02, 03, 04, 05.

28th January 1999  John Allison  (examples-01-00-01)
- Changed test02.in to reduce printing slightly.
- Updated .out files to SUN debug.

13th December 1998  John Allison  (examples-00-04-03)
- N04: New em processes for ions (Hans-Peter)
- N05: Bug fix in ExN05CalorimeterSD (Marc).
