@@ -1,4 +1,4 @@
-$Id: History,v 1.8 1999-05-27 13:04:49 stesting Exp $
+$Id: History,v 1.9 1999-05-28 12:55:33 stesting Exp $
 -------------------------------------------------------------------
 
      =========================================================
@@ -16,6 +16,9 @@ committal in the CVS repository !
      ----------------------------------------------------------
      * Reverse chronological order (last date on top), please *
      ----------------------------------------------------------
+
+28th May 1999  John Allison  (examples-01-00-08)
+- Reordered #include "G4Timer.hh" (must be first) in exampleN05 and 6.
 
 27th May 1999  John Allison  (examples-01-00-07)
 - Updated exampleN04.out to correspond to geant4-00-cand-09b.
